--- a/src/App.css
+++ b/src/App.css
@@ -54,34 +54,92 @@ footer a {
   padding: 10px;
   border-radius: 5px;
   font-size: 16px;
+  font-weight: bold;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
 
-.joinBtn {
-  background: #4aed88;
-  width: 100px;
-  margin-left: auto;
+.joinBtn,
+.leaveBtn {
+    background: #4aed88;
+    width: 100px;
+    margin-left: auto;
 }
 
-.joinBtn:hover {
-  background: #2b824c;
+.joinBtn:hover,
+.leaveBtn:hover {
+    background: #2b824c;
 }
 
 .createInfo {
-  margin: 0 auto;
-  margin-top: 20px;
+    margin: 0 auto;
+    margin-top: 20px;
 }
 
 .createNewBtn {
-  color: #4aed88;
-  text-decoration: none;
-  border-bottom: 1px solid #4aed88;
-  transition: all 0.3s ease-in-out;
+    color: #4aed88;
+    text-decoration: none;
+    border-bottom: 1px solid #4aed88;
+    transition: all 0.3s ease-in-out;
 }
 
 .createNewBtn:hover,
 footer a:hover {
-  color: #368654;
-  border-color: #368654;
+    color: #368654;
+    border-color: #368654;
+}
+
+.mainWrap {
+  display: grid;
+  grid-template-columns: 230px 1fr;
+}
+
+.aside {
+  background: #1c1e29;
+  padding: 16px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+.asideInner {
+  flex: 1;
+}
+
+.clientsList {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.client {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-weight: bold;
+}
+
+.username {
+  margin-top: 10px;
+}
+
+.logo {
+  border-bottom: 1px solid #424242;
+  padding-bottom: 10px;
+}
+
+.logoImage {
+  height: 60px;
+}
+
+.leaveBtn {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.CodeMirror {
+  min-height: calc(100vh - 20px);
+  font-size: 20px;
+  line-height: 1.6;
+  padding-top: 20px;
 }
